correction wrapping skills boxes

--- a/src/components/competences/competences.css
+++ b/src/components/competences/competences.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 2rem;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .container_competences > div {
